# docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  model.Entry:
+  models.Entry:
     properties:
       id:
         type: integer
@@ -8,7 +8,7 @@ definitions:
       user_id:
         type: integer
     type: object
-  model.UserInput:
+  models.UserInput:
     properties:
       email:
         type: string
@@ -21,14 +21,57 @@ info:
   title: time-tracker
   version: "1.0"
 paths:
-  /activity:
+  /login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: username, password
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: X-Auth-Token
+      summary: login
+      tags:
+      - account
+  /signup:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: username, password
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserInput'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: user created successfully
+      summary: signup
+      tags:
+      - account
+  /tracker/activity:
     get:
       consumes:
       - application/json
       parameters:
       - description: JWT Token
         in: header
-        name: X-AUTH-TOKEN
+        name: X-Auth-Token
+        required: true
+        type: string
+      - description: 'duration: custom,week,day,month,day,today '
+        in: query
+        name: duration
         required: true
         type: string
       - description: 'starting date : format 2021-01-01'
@@ -43,56 +86,18 @@ paths:
       - application/json
       responses:
         "200":
-          description: '{"today":"","24hours":"","weekly":"","monthly":""}'
+          description: '{"total_time":""}'
       summary: List of all entries
       tags:
       - timer
-  /login:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: username, password
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/model.UserInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: X-AUTH-TOKEN
-      summary: login
-      tags:
-      - account
-  /signup:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: username, password
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/model.UserInput'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: user created successfully
-      summary: signup
-      tags:
-      - account
-  /start:
+  /tracker/start:
     post:
       consumes:
       - application/json
       parameters:
       - description: JWT Token
         in: header
-        name: X-AUTH-TOKEN
+        name: X-Auth-Token
         required: true
         type: string
       produces:
@@ -101,11 +106,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Entry'
+            $ref: '#/definitions/models.Entry'
       summary: Start timer
       tags:
       - timer
-  /stop/{id}:
+  /tracker/stop/{id}:
     put:
       consumes:
       - application/json
@@ -117,7 +122,7 @@ paths:
         type: string
       - description: JWT Token
         in: header
-        name: X-AUTH-TOKEN
+        name: X-Auth-Token
         required: true
         type: string
       produces:
