# main.go
@@ -4,10 +4,13 @@ import (
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/zzuun/time-tracker/auth"
 	"github.com/zzuun/time-tracker/controller"
+	"github.com/zzuun/time-tracker/databases"
 	_ "github.com/zzuun/time-tracker/docs"
-	"github.com/zzuun/time-tracker/model"
+	"github.com/zzuun/time-tracker/utils"
 	"log"
+	"net/http"
 )
 
 // @title time-tracker
@@ -16,29 +19,45 @@ import (
 
 func main() {
 
-	//todo change to env variables
-	model.HOST = "172.17.0.2"
-	model.PASSWORD = "postgres"
-	model.USER = "postgres"
-
 	router := gin.Default()
 
-	db, err := model.ConnectDB()
+	db, err := databases.ConnectDatabase()
 	if err != nil {
 		log.Fatal(err)
 	}
 	defer db.Close()
 
-	ctrl := &controller.Controller{DB: db}
+	ctrl := controller.NewController(db)
 
 	//routes
-	router.POST("/signup", ctrl.Signup)
-	router.POST("/login", ctrl.Login)
-	router.POST("/start", ctrl.StartTime)
-	router.PUT("/stop/:id", ctrl.StopTime)
-	router.GET("/activity", ctrl.Activity)
+	router.POST("/signup", ctrl.SignupPost)
+	router.POST("/login", ctrl.LoginPost)
+
+	trackerRoutes := router.Group("/tracker")
+	trackerRoutes.Use(Authenticate())
+	trackerRoutes.POST("/start", ctrl.StartTimePost)
+	trackerRoutes.PUT("/stop/:id", ctrl.StopTimePut)
+	trackerRoutes.GET("/activity", ctrl.ActivityGet)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	log.Fatal(router.Run(":8000"))
 
+}
+
+func Authenticate() gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		token := ctx.GetHeader(utils.XAuthToken)
+		if len(token) == 0 {
+			ctx.JSON(http.StatusUnauthorized, "X-Auth-Token is missing")
+			ctx.Abort()
+		}
+
+		userId, err := auth.ValidateToken(token)
+		if err != nil {
+			ctx.JSON(http.StatusUnauthorized, err.Error())
+			ctx.Abort()
+		}
+		ctx.Set(utils.UserId, userId)
+		ctx.Next()
+	}
 }
